@@ -34,21 +34,6 @@ msn protocol
 
 unificated external actions
 
-> <layout>
-> Online
->       Group A
->               FriendA1
->               FriendA2
->       Group B
->               FriendB1
-> OffLine
->       FriendA3
->       FriendB2
-> </layout>
-
-this seems similar to mirabilis icq group mode 2, which i suggested
-a while ago. i'd also be happy about it.
-
 > Sorry, another thing I'd like to request, now, that the amount of
 > protocols supported by centericq is growing: How about another
 > status-menu-entry 'All' ? I.e. to set status N/A on all protocols at
@@ -77,4 +62,4 @@ so when I press F2 it just opens another screen and CenterICQ doesn't crash.
 
 -------------------------------------------------------------------------------
 
-$Id: TODO,v 1.103 2002/01/21 10:50:40 konst Exp $
+$Id: TODO,v 1.104 2002/01/22 11:59:14 konst Exp $
