@@ -714,3 +714,7 @@ A useful and very wanted feature was added. Now centericq can make a log
 file in which events such as users' going offline and online, as well as
 events receiption and sending are logged. It's possible to turn on with
 the "Configuration" dialog.
+
+User group modes 1 and 2 were implemented. First one means users are
+arranged into groups on the first level nodes in the tree, and second is
+visa versa, e.g. online/offline has upper position.
